k8s/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lanchonete-gateway
  namespace: lanchonete
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lanchonete-virtualservice
  namespace: lanchonete
spec:
  hosts:
    - "*"
  gateways:
    - lanchonete-gateway
  http:
    - match:
        - uri:
            prefix: /api/auth
      route:
        - destination:
            host: auth-service
            port:
              number: 8080
